--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,105 @@
+* {
+    font-family: "Nunito Sans";
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
+    background-color: rgba(0, 0, 0, 0.692);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     min-height: 100vh;
     margin: 0;
 }
 
+.header {
+    background-color: goldenrod;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: 800;
+}
+
+.buttons {
+    color: goldenrod;
+    align-self: center;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border-bottom: 2px solid goldenrod;
+    padding: 10px;
+    margin: 25px 0 10px 0;
+}
+
+.slider {
+    appearance: none;
+    width: 100%;
+    height: 10px;
+    background-color: whitesmoke;
+    border-radius: 5px;
+}
+
+.slider::-webkit-slider-thumb {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background-color: goldenrod;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.slider-value {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    color: goldenrod;
+}
+
+hr {
+    color: goldenrod;
+    height: 25px;
+    background-color: rgba(218, 165, 32, 0.712);
+    border: 1px solid goldenrod;
+}
+
+.container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
 .whiteboard {
+    background-color: white;
     flex-shrink: 0;
     display: flex;
     flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
-    border: 2px solid black;
+    width: 720px;
+    height: 720px;
+    border: 10px solid goldenrod;
+}
+
+.square {
+    box-sizing: border-box;
+    border: 1px solid whitesmoke;
+}
+
+.footer {
+    flex-shrink: 0;
+    background-color: goldenrod;
+    display: flex;
     justify-content: center;
-    align-items: stretch;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.square {
+    background-color: white;
 }
